# nk-event-driven-system

./: .gitignore  .gitmodules  .vimrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  nk_array.h  nk_bits.h  nk_compiler.h  nk_core.h  nk_cpu.h  nk_debug.h  nk_error.h  nk_farray.h  nk_fqueue.h  nk_list.h  nk_result.h  nk_string.c  nk_string.h  nk_tasker.c  nk_tasker.h  nk_types.h  nk_varray.h
codec/: manchester.c  manchester.h  nk_manchester.c  nk_manchester.h
common/: nk_bits.h  nk_error.h
composite/: nk_bitarray.c  nk_bitarray.h  nk_dqueue.c  nk_dqueue.h  nk_fqueue.h  nk_list.h  nk_queue.h  nk_result.h  nk_string.c  nk_string.h
convert/: hexador.c  hexador.h  nk_convert.c  nk_convert.h  nk_hexador.c  nk_hexador.h
documentation/: DEVELOPER_MANUAL.md  USER_MANUAL.md  abbreviations.md  application_development.md  eds.doxyfile  error_handling.md  function_classes.md  nk_devel_coding_style.md  nk_devel_pull_requests.md  nk_documentation_build.md  nk_style_eclipse_v10.xml  nk_testing.md  nk_versioning.md  theory_of_operation.md  time_complexity.md
eds/: nk_epa.h  nk_equeue.h  nk_event.h  nk_sm.h
mem/: mem_generic.h  mem_pool.h  mem_static.h
portable/: nk_compiler.h  nk_core.h  nk_cpu.h
source/: eds.c  eds.h  eds_config.h  eds_core.c  eds_core.h  eds_epa.c  eds_epa.h  eds_epn.c  eds_epn.h  eds_equeue.c  eds_equeue.h  eds_event.c  eds_event.h  eds_evt.c  eds_evt.h  (+15 more)
tests/unit-tests/test_eds/: Makefile  meson.build  test_eds.c  test_eds.cpp
tests/unit-tests/test_eds_core/: meson.build  test_eds_core.c  test_eds_core.cpp
(+73 files in other folders)
